Code cleaned up and some tests added
